plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.3.3'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'br.com.betola'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation("com.google.guava:guava:32.0.0-jre")
	implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.3'
	implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
	implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
	implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
	implementation group: 'org.springframework.kafka', name: 'spring-kafka', version: '3.2.3'

}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile) {
	options.compilerArgs += '--enable-preview'
}

tasks.withType(Test) {
	jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
	jvmArgs += '--enable-preview'
}
